Update Terraform configurations for Proxmox VM management

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,9 @@ vault filter=git-crypt diff=git-crypt
 *.tfvars filter=git-crypt diff=git-crypt
 **/*.tfvars filter=git-crypt diff=git-crypt
 .tfvars filter=git-crypt diff=git-crypt
+*.tfstate filter=git-crypt diff=git-crypt
+**/*.tfstate filter=git-crypt diff=git-crypt
+.tfstate filter=git-crypt diff=git-crypt
+*.tfstate.backup filter=git-crypt diff=git-crypt
+**/*.tfstate.backup filter=git-crypt diff=git-crypt
+.tfstate.backup filter=git-crypt diff=git-crypt
